--- a/src/pages/booklist/lendbook/lendbook.scss
+++ b/src/pages/booklist/lendbook/lendbook.scss
@@ -1,4 +1,4 @@
-page-lendcd {
+page-lendbook {
   .is-on {
     ion-card-content, ion-card-header, ion-grid {
       background-color: color($colors, secondary-light);
